Change box-shadow style

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         cursor: pointer;
       }
       .window.playing {
-        box-shadow : #DB7689 0 20px 40px 5px;
+        box-shadow : #B9B9B9 0 15px 45px 5px;
         /*-webkit-animation: window_bounce  1.5s infinite;*/
       }
       .equalizer {
