Change window:hover style to make hover transition clear

--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
       }
       .window:hover {
         border: 3px solid #fff;
+        width: calc(25rem - 6px);
+        height: calc(15.625rem - 6px);
       }
       .window.playing {
         box-shadow : #9D9D9D 0 15px 45px 5px;
