Change cursor styles on text divs

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         display: inline-block;
         vertical-align: top;
         line-height: 3rem;
-        cursor: normal;
+        cursor: pointer;
       }
       .content {
         margin: 0 auto;
@@ -69,6 +69,7 @@
         margin-bottom: 20px;
         width: 25rem;
         transition: all 1s ease;
+        cursor: default
       }
       .star_name.play {
         color: #C4C5CC;
