--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         border-radius: 0.75rem;
         margin: 0 auto;
         transition: box-shadow 1s ease,
-                    filter 0.4s ease;
+                    filter 0.4s ease,
+                    all 0.4s ease;
         box-shadow: #aeb8bd 0 10px 30px;
         border: 1px solid rgba(255,255,255,0);
         background: rgba(255,255,255,1);
