--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
       }
       nav {
         margin: 0;
+        position: fixed;
+        z-index: 10;
+        width: 100%;
       }
       nav .view_list_fanic {
         width: 8rem;
       }
       nav .view_list_fanic.hover {
-        background-color: #000;
+        background-color: #C4C5CC;
       }
       nav .view_list {
         width: 3rem;
@@ -36,7 +39,7 @@
       nav .view_list .bar {
         height: 3px;
         width: 1.5rem;
-        background-color: #aeb8bd;
+        background-color: #C4C5CC;
         border-radius: 10px;
         margin-bottom: 4px;
       }
@@ -44,25 +47,47 @@
         width: 1rem;
       }
       nav .fanic {
-        color: #aeb8bd;
+        color: #C4C5CC;
         font-family: "Helvetica Neue";
         font-size: 1.5rem;
         font-weight: bold;
         display: inline-block;
         vertical-align: top;
         line-height: 3rem;
+        /*cursor: pointer;*/
+        cursor: default;
+      }
+      nav .star_list_div {
+        width: 100%;
+        height: 100vh;
+        background: rgba(244,248,248,0.9);
+      }
+      nav .star_list_div .star_list {
+        margin-left: 3rem;
+        margin-top: 2rem;
+        display: inline-block;
+      }
+      nav .star_list_div .star_list .star_name {
+        color: #C4C5CC;
+        font-family: "Helvetica Neue";
+        font-size: 3rem;
+        font-weight: bold;
+        line-height: 4.5rem;
         cursor: pointer;
+        transition: all 0.2s ease;
+      }
+      nav .star_list_div .star_list .star_name:hover {
+        color: #939499;
       }
       .content {
         margin: 0 auto;
         position: relative;
-        top: calc(50% - 3rem);
+        top: calc(50%);
         transform: translateY(-50%);
         width: auto;
       }
-      .star_name {
+      .content .star_name {
         color: #939499;
-        /*757780*/
         font-family: "Helvetica Neue";
         font-size: 36px;
         font-weight: bold;
@@ -72,10 +97,10 @@
         transition: all 1s ease;
         cursor: default
       }
-      .star_name.play {
+      .content .star_name.play {
         color: #C4C5CC;
       }
-      .window {
+      .content .window {
         width: 25rem;
         height: 15.625rem;
         border-radius: 0.75rem;
@@ -92,16 +117,16 @@
         background: linear-gradient(to bottom, rgba(222,50,83,1) 0%, rgba(215,47,78,1) 100%);
         cursor: pointer;
       }
-      .window:hover {
+      .content .window:hover {
         border: 3px solid #fff;
         width: calc(25rem - 6px);
         height: calc(15.625rem - 6px);
       }
-      .window.playing {
+      .content .window.playing {
         box-shadow : #9D9D9D 0 15px 45px 5px;
         /*-webkit-animation: window_bounce  1.5s infinite;*/
       }
-      .equalizer {
+      .content .equalizer {
         position: relative;
         margin: 0 auto;
         top: 50%;
@@ -109,7 +134,7 @@
         width: 26px;
         height: 30px;
       }
-      .equalizer .equalizer_bar {
+      .content .equalizer .equalizer_bar {
         width: 3px;
         height: 5px;
         background-color: #fff;
@@ -118,7 +143,7 @@
         vertical-align: middle;
         transition: all 1s ease;
       }
-      .control_bar {
+      .content .control_bar {
         margin: 0 auto;
         width: 18.75rem;
       }
@@ -132,7 +157,7 @@
   </head>
   <body>
     <nav>
-      <a href="javascript:" onclick="open_view_list()" style="text-decoration: none;">
+      <!-- <a href="javascript:" onclick="open_view_list()" style="text-decoration: none;"> -->
         <div class="view_list_fanic">
           <div class="view_list">
             <div class="bar_wrapper">
@@ -145,7 +170,15 @@
             Fanic
           </div>
         </div>
-      </a>
+      <!-- </a>
+      <div class="star_list_div">
+        <div class="star_list">
+          <div class="star_name">Park Hyoshin</div>
+          <div class="star_name">Dynamic Duo</div>
+          <div class="star_name">Dynamic Duo</div>
+          <div class="star_name">Dynamic Duo</div>
+        </div>
+      </div> -->
     </nav>
     <div class="content">
       <div class="star_name">
@@ -267,6 +300,7 @@
         progress_bar.value = (player.getCurrentTime() / player.getDuration()) * 100;
       }
       function open_view_list() {
+
         return false;
       }
     </script>
