Update meta data

--- a/index.html
+++ b/index.html
@@ -2,15 +2,32 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Fanic</title>
+    <link href="./assets/favicon.png" rel="shortcut icon" type="image/png">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport">
+
     <link rel="stylesheet" href="./css/animation.css">
     <link rel="stylesheet" href="./css/input_style.css">
     <link rel="stylesheet" media='screen and (min-width: 500px)' href="./css/style.css">
     <link rel="stylesheet" media='screen and (max-width: 500px)' href="./css/style_mobile.css">
-    <style media="screen">
 
-    </style>
+    <meta content="List your favorite playlist of your star. Do Fanic!" name="description">
+    <meta content="English" name="language">
+    <meta name="Access-Control-Allow-Origin" content="*">
+
+    <!-- Facebook -->
+    <meta content="Fanic" property="og:site_name">
+    <meta content="Fanic" property="og:title">
+    <meta content="List your favorite playlist of your star. Do Fanic!" property="og:description">
+    <meta content="https://onlymytho.github.me/fanic" property="og:url">
+    <meta content="website" property="og:type">
+    <meta content="https://onlymytho.github.me/fanic/assets/og.png" property="og:image">
+    <!-- Twitter -->
+    <!-- <meta content="photo" name="twitter:card"> -->
+    <meta content="Fanic" name="twitter:title">
+    <meta content="List your favorite playlist of your star. Do Fanic!" name="twitter:description">
+    <script async="" src="./Before Airbnb_files/analytics.js"></script>
+
   </head>
   <body>
     <nav>
